hal/include/HAL/HAL.hpp

	enum tResourceType
	{
		kResourceType_Controller,
		kResourceType_Module,
		kResourceType_Language,
		kResourceType_CANPlugin,
		kResourceType_Accelerometer,
		kResourceType_ADXL345,
		kResourceType_AnalogChannel,
		kResourceType_AnalogTrigger,
		kResourceType_AnalogTriggerOutput,
		kResourceType_CANJaguar,
		kResourceType_Compressor,
		kResourceType_Counter,
		kResourceType_Dashboard,
		kResourceType_DigitalInput,
		kResourceType_DigitalOutput,
		kResourceType_DriverStationCIO,
		kResourceType_DriverStationEIO,
		kResourceType_DriverStationLCD,
		kResourceType_Encoder,
		kResourceType_GearTooth,
		kResourceType_Gyro,
		kResourceType_I2C,
		kResourceType_Framework,
		kResourceType_Jaguar,
		kResourceType_Joystick,
		kResourceType_Kinect,
		kResourceType_KinectStick,
		kResourceType_PIDController,
		kResourceType_Preferences,
		kResourceType_PWM,
		kResourceType_Relay,
		kResourceType_RobotDrive,
		kResourceType_SerialPort,
		kResourceType_Servo,
		kResourceType_Solenoid,
		kResourceType_SPI,
		kResourceType_Task,
		kResourceType_Ultrasonic,
		kResourceType_Victor,
		kResourceType_Button,
		kResourceType_Command,
		kResourceType_AxisCamera,
		kResourceType_PCVideoServer,
		kResourceType_SmartDashboard,
		kResourceType_Talon,
		kResourceType_HiTechnicColorSensor,
		kResourceType_HiTechnicAccel,
		kResourceType_HiTechnicCompass,
		kResourceType_SRF08,
		kResourceType_AnalogOutput,
        kResourceType_VictorSP,
        kResourceType_TalonSRX,
        kResourceType_CANTalonSRX,
	};
struct HALControlWord {
	uint32_t enabled : 1;
	uint32_t autonomous : 1;
	uint32_t test :1;
	uint32_t eStop : 1;
	uint32_t fmsAttached:1;
	uint32_t dsAttached:1;
	uint32_t control_reserved : 26;
};
enum HALAllianceStationID {
	kHALAllianceStationID_red1,
	kHALAllianceStationID_red2,
	kHALAllianceStationID_red3,
	kHALAllianceStationID_blue1,
	kHALAllianceStationID_blue2,
	kHALAllianceStationID_blue3,
};
struct HALJoystickAxes {
	uint16_t count;
	int16_t axes[kMaxJoystickAxes];
};
struct HALJoystickPOVs {
	uint16_t count;
	int16_t povs[kMaxJoystickPOVs];
};
struct HALJoystickButtons {
	uint32_t buttons;
	uint8_t count;
};
	int HALGetControlWord(HALControlWord *data);
	int HALGetAllianceStation(enum HALAllianceStationID *allianceStation);
	int HALGetJoystickAxes(uint8_t joystickNum, HALJoystickAxes *axes);
	int HALGetJoystickPOVs(uint8_t joystickNum, HALJoystickPOVs *povs);
	int HALGetJoystickButtons(uint8_t joystickNum, HALJoystickButtons *buttons);
	int HALGetJoystickIsXbox(uint8_t joystickNum);
	int HALGetJoystickType(uint8_t joystickNum);
	const char* HALGetJoystickName(uint8_t joystickNum);
	int HALSetJoystickOutputs(uint8_t joystickNum, uint32_t outputs, uint16_t leftRumble, uint16_t rightRumble);