hal/include/HAL/UsageReporting.h

enum tResourceType {
  kResourceType_Controller,
  kResourceType_Module,
  kResourceType_Language,
  kResourceType_CANPlugin,
  kResourceType_Accelerometer,
  kResourceType_ADXL345,
  kResourceType_AnalogChannel,
  kResourceType_AnalogTrigger,
  kResourceType_AnalogTriggerOutput,
  kResourceType_CANJaguar,
  kResourceType_Compressor,
  kResourceType_Counter,
  kResourceType_Dashboard,
  kResourceType_DigitalInput,
  kResourceType_DigitalOutput,
  kResourceType_DriverStationCIO,
  kResourceType_DriverStationEIO,
  kResourceType_DriverStationLCD,
  kResourceType_Encoder,
  kResourceType_GearTooth,
  kResourceType_Gyro,
  kResourceType_I2C,
  kResourceType_Framework,
  kResourceType_Jaguar,
  kResourceType_Joystick,
  kResourceType_Kinect,
  kResourceType_KinectStick,
  kResourceType_PIDController,
  kResourceType_Preferences,
  kResourceType_PWM,
  kResourceType_Relay,
  kResourceType_RobotDrive,
  kResourceType_SerialPort,
  kResourceType_Servo,
  kResourceType_Solenoid,
  kResourceType_SPI,
  kResourceType_Task,
  kResourceType_Ultrasonic,
  kResourceType_Victor,
  kResourceType_Button,
  kResourceType_Command,
  kResourceType_AxisCamera,
  kResourceType_PCVideoServer,
  kResourceType_SmartDashboard,
  kResourceType_Talon,
  kResourceType_HiTechnicColorSensor,
  kResourceType_HiTechnicAccel,
  kResourceType_HiTechnicCompass,
  kResourceType_SRF08,
  kResourceType_AnalogOutput,
  kResourceType_VictorSP,
  kResourceType_TalonSRX,
  kResourceType_CANTalonSRX,
  kResourceType_ADXL362,
  kResourceType_ADXRS450,
  kResourceType_RevSPARK,
  kResourceType_MindsensorsSD540,
  kResourceType_DigitalFilter,
};
/**
 * Report the usage of a resource of interest.
 *
 * @param resource one of the values in the tResourceType above (max value 51)
 * @param instanceNumber an index that identifies the resource instance.
 * @param context an optional additional context number for some cases (such a
 *        module number). Set to 0 to omit.
 * @param feature a string to be included describing features in use on a
 *        specfic resource.  Setting the same resource more than once allows you
 *        to change the feature string.
 */
uint32_t EXPORT_FUNC report(tResourceType resource, uint8_t instanceNumber,
                            uint8_t context = 0, const char* feature = nullptr);
uint32_t EXPORT_FUNC FRC_NetworkCommunication_nUsageReporting_report(
    uint8_t resource, uint8_t instanceNumber, uint8_t context,
    const char* feature);