wpilibj/wpilibJavaDevices/src/main/java/edu/wpi/first/wpilibj/communication/FRCNetworkCommunicationsLibrary.java


  /**
   * Original signature : <code>tTargetClass getTargetClass()</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\LoadOut.h:25</i>
   */
  public static native int getTargetClass();

  /**
   * Original signature :
   * <code>uint32_t FRC_NetworkCommunication_nLoadOut_getModulePresence(uint32_t, uint8_t)</code>
   * <br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\LoadOut.h:32</i>
   */
  public static native int FRCNetworkCommunicationLoadOutGetModulePresence(int moduleType,
      byte moduleNumber);

  /**
   * Original signature :
   * <code>uint32_t FRC_NetworkCommunication_nLoadOut_getTargetClass()</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\LoadOut.h:33</i>
   */
  public static native int FRCNetworkCommunicationLoadOutGetTargetClass();

  /**
   * Original signature :
   * <code>STATUS moduleNameFindBySymbolName(const char*, char*)</code><br>
   *$
   * @param symbol symbol name to look for<br>
   * @param module where to return module name<br>
   *        <i>native declaration :
   *        src\main\include\NetworkCommunication\symModuleLink.h:6</i><br>
   * @deprecated use the safer methods
   *             {@link #moduleNameFindBySymbolName(java.lang.String, java.nio.ByteBuffer)}
   *             and
   *             {@link #moduleNameFindBySymbolName(com.sun.jna.Pointer, com.sun.jna.Pointer)}
   *             instead
   */
  // @Deprecated
  // public static native FRC_NetworkCommunicationsLibrary.STATUS
  // moduleNameFindBySymbolName(Pointer symbol, Pointer module);
  /**
   * Original signature :
   * <code>STATUS moduleNameFindBySymbolName(const char*, char*)</code><br>
   *$
   * @param symbol symbol name to look for<br>
   * @param module where to return module name<br>
   *        <i>native declaration :
   *        src\main\include\NetworkCommunication\symModuleLink.h:6</i>
   */
  // public static native FRC_NetworkCommunicationsLibrary.STATUS
  // moduleNameFindBySymbolName(String symbol, ByteBuffer module);
  /**
   * Report the usage of a resource of interest. <br>
   *
   * <br>
   *$
   * @param resource one of the values in the tResourceType above (max value
   *        51). <br>
   * @param instanceNumber an index that identifies the resource instance. <br>
   * @param context an optional additional context number for some cases (such
   *        as module number). Set to 0 to omit. <br>
   * @param feature a string to be included describing features in use on a
   *        specific resource. Setting the same resource more than once allows
   *        you to change the feature string.<br>
   *        Original signature :
   *        <code>uint32_t report(tResourceType, uint8_t, uint8_t, const char*)</code>
   * <br>
   *        <i>native declaration :
   *        src\main\include\NetworkCommunication\UsageReporting.h:113</i><br>
   * @deprecated use the safer methods
   *             {@link #report(int, byte, byte, java.lang.String)} and
   *             {@link #report(int, byte, byte, com.sun.jna.Pointer)} instead
   */
  // @Deprecated
  // public static native int report(int resource, byte instanceNumber, byte
  // context, Pointer feature);
  /**
   * Report the usage of a resource of interest. <br>
   *
   * <br>
   *$
   * @param resource one of the values in the tResourceType above (max value
   *        51). <br>
   * @param instanceNumber an index that identifies the resource instance. <br>
   * @param context an optional additional context number for some cases (such
   *        as module number). Set to 0 to omit. <br>
   * @param feature a string to be included describing features in use on a
   *        specific resource. Setting the same resource more than once allows
   *        you to change the feature string.<br>
   *        Original signature :
   *        <code>uint32_t report(tResourceType, uint8_t, uint8_t, const char*)</code>
   * <br>
   *        <i>native declaration :
   *        src\main\include\NetworkCommunication\UsageReporting.h:113</i>
   */
  public static native int report(int resource, byte instanceNumber, byte context, String feature);

  /**
   * Original signature :
   * <code>uint32_t FRC_NetworkCommunication_nUsageReporting_report(uint8_t, uint8_t, uint8_t, const char*)</code>
   * <br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\UsageReporting.h:120</i><br>
   *$
   * @deprecated use the safer methods
   *             {@link #FRC_NetworkCommunication_nUsageReporting_report(byte, byte, byte, java.lang.String)}
   *             and
   *             {@link #FRC_NetworkCommunication_nUsageReporting_report(byte, byte, byte, com.sun.jna.Pointer)}
   *             instead
   */
  // @Deprecated
  // public static native int
  // FRC_NetworkCommunication_nUsageReporting_report(byte resource, byte
  // instanceNumber, byte context, Pointer feature);
  /**
   * Original signature :
   * <code>uint32_t FRC_NetworkCommunication_nUsageReporting_report(uint8_t, uint8_t, uint8_t, const char*)</code>
   * <br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\UsageReporting.h:120</i>
   */
  public static native int FRCNetworkCommunicationUsageReportingReport(byte resource,
      byte instanceNumber, byte context, String feature);

  /**
   * Original signature :
   * <code>void getFPGAHardwareVersion(uint16_t*, uint32_t*)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:124</i><br>
   *$
   * @deprecated use the safer methods
   *             {@link #getFPGAHardwareVersion(java.nio.ShortBuffer, java.nio.IntBuffer)}
   *             and
   *             {@link #getFPGAHardwareVersion(com.sun.jna.ptr.ShortByReference, com.sun.jna.ptr.IntByReference)}
   *             instead
   */
  // @Deprecated
  // public static native void getFPGAHardwareVersion(ShortByReference
  // fpgaVersion, IntByReference fpgaRevision);
  /**
   * Original signature :
   * <code>void getFPGAHardwareVersion(uint16_t*, uint32_t*)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:124</i>
   */
  public static native void getFPGAHardwareVersion(ShortBuffer fpgaVersion, IntBuffer fpgaRevision);

  /**
   * Original signature : <code>int setErrorData(const char*, int, int)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:136</i><br>
   *$
   * @deprecated use the safer methods
   *             {@link #setErrorData(java.lang.String, int, int)} and
   *             {@link #setErrorData(com.sun.jna.Pointer, int, int)} instead
   */
  // @Deprecated
  // public static native int setErrorData(Pointer errors, int errorsLength, int
  // wait_ms);
  /**
   * Original signature : <code>int setErrorData(const char*, int, int)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:136</i>
   */
  public static native int setErrorData(String errors, int errorsLength, int wait_ms);

  /**
   * Original signature : <code>int overrideIOConfig(const char*, int)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:138</i><br>
   *$
   * @deprecated use the safer methods
   *             {@link #overrideIOConfig(java.lang.String, int)} and
   *             {@link #overrideIOConfig(com.sun.jna.Pointer, int)} instead
   */
  // @Deprecated
  // public static native int overrideIOConfig(String ioConfig, int wait_ms);
  /**
   * Original signature : <code>int overrideIOConfig(const char*, int)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:138</i>
   */
  public static native int overrideIOConfig(String ioConfig, int wait_ms);

  /**
   * Original signature : <code>void setNewDataSem(pthread_mutex_t*)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:147</i>
   */
  public static native void setNewDataSem(ByteBuffer mutexId);

  /**
   * Original signature : <code>void setResyncSem(pthread_mutex_t*)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:148</i>
   */
  // public static native void
  // setResyncSem(FRC_NetworkCommunicationsLibrary.pthread_mutex_t
  // pthread_mutex_tPtr1);
  /**
   * Original signature : <code>void signalResyncActionDone()</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:150</i>
   */
  public static native void signalResyncActionDone();

  /**
   * this uint32_t is really a LVRefNum<br>
   * Original signature : <code>void setNewDataOccurRef(uint32_t)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:154</i>
   */
  public static native void setNewDataOccurRef(int refnum);

  /**
   * Original signature : <code>void setResyncOccurRef(uint32_t)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:156</i>
   */
  public static native void setResyncOccurRef(int refnum);

  /**
   * Original signature :
   * <code>void FRC_NetworkCommunication_getVersionString(char*)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:159</i><br>
   *$
   * @deprecated use the safer methods
   *             {@link #FRC_NetworkCommunication_getVersionString(java.nio.ByteBuffer)}
   *             and
   *             {@link #FRC_NetworkCommunication_getVersionString(com.sun.jna.Pointer)}
   *             instead
   */
  // @Deprecated
  // public static native void FRC_NetworkCommunication_getVersionString(Pointer
  // version);
  /**
   * Original signature :
   * <code>void FRC_NetworkCommunication_getVersionString(char*)</code><br>
   * <i>native declaration :
   * src\main\include\NetworkCommunication\FRCComm.h:159</i>
   */
  public static native void FRCNetworkCommunicationGetVersionString(ByteBuffer version);

  public static native void FRCNetworkCommunicationObserveUserProgramStarting();

  public static native void FRCNetworkCommunicationObserveUserProgramDisabled();

  public static native void FRCNetworkCommunicationObserveUserProgramAutonomous();

  public static native void FRCNetworkCommunicationObserveUserProgramTeleop();

  public static native void FRCNetworkCommunicationObserveUserProgramTest();

  public static native void FRCNetworkCommunicationReserve();

  private static native int NativeHALGetControlWord();

  public static HALControlWord HALGetControlWord() {
    int word = NativeHALGetControlWord();
    return new HALControlWord((word & 1) != 0, ((word >> 1) & 1) != 0, ((word >> 2) & 1) != 0,
        ((word >> 3) & 1) != 0, ((word >> 4) & 1) != 0, ((word >> 5) & 1) != 0);
  }

  private static native int NativeHALGetAllianceStation();

  public static HALAllianceStationID HALGetAllianceStation() {
    switch (NativeHALGetAllianceStation()) {
      case 0:
        return HALAllianceStationID.Red1;
      case 1:
        return HALAllianceStationID.Red2;
      case 2:
        return HALAllianceStationID.Red3;
      case 3:
        return HALAllianceStationID.Blue1;
      case 4:
        return HALAllianceStationID.Blue2;
      case 5:
        return HALAllianceStationID.Blue3;
      default:
        return null;
    }
  }

  public static int kMaxJoystickAxes = 12;
  public static int kMaxJoystickPOVs = 12;

  public static native short[] HALGetJoystickAxes(byte joystickNum);

  public static native short[] HALGetJoystickPOVs(byte joystickNum);

  public static native int HALGetJoystickButtons(byte joystickNum, ByteBuffer count);

  public static native int HALSetJoystickOutputs(byte joystickNum, int outputs, short leftRumble,
      short rightRumble);

  public static native int HALGetJoystickIsXbox(byte joystickNum);

  public static native int HALGetJoystickType(byte joystickNum);

  public static native String HALGetJoystickName(byte joystickNum);
